--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
